fixing header z-index, blog big image, pt contact translation, wsplogo in contact

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -20,6 +20,7 @@
     cursor: pointer;
     text-align: center;
     color: var(--text-color);
+    font-size: 20px;
   }
 
   .active-item {
@@ -46,16 +47,16 @@ mat-toolbar {
   padding: 0 5%;
   height: 100px;
   background-color: var(--background-color);
-  position: fixed; // Añade esta línea
-  width: 100%; // Asegúrate de que el ancho sea del 100% para cubrir todo el ancho de la pantalla
-  z-index: 1; // Ajusta el z-index según sea necesario para asegurarte de que el header está encima de los demás elementos
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
 }
 
 .logo-container {
   img {
     cursor: pointer;
-    max-width: 155px; // O cualquier valor que se ajuste mejor a tu diseño
-    height: auto; // Esto mantiene la relación de aspecto de la imagen al cambiar su anchura
+    max-width: 155px;
+    height: auto;
   }
 }
 
